# example-plugin

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: tests.yaml
bats/data/reference/tests/test_parse_example_logs/: step_00.ref
bats/data/reference/tests/test_parse_example_logs_with_argument/: step_00.ref
bats/tests/: setup_suite.bash  tests.bats
builtins/operators/: read_custom_log.cpp
example/: CMakeLists.txt
example/integration/data/reference/tests/test_check_plugin_availability/: step_00.ref
example/integration/tests/: tests.bats
integration/data/reference/tests/test_check_plugin_availability/: step_00.ref
integration/data/reference/tests/test_parse_example_logs/: step_00.ref
integration/data/reference/tests/test_trim_strings/: step_01.ref  step_02.ref
integration/data/reference/tests/test_trimming_non-2dstring_fields_fails/: step_00.ref
integration/tests/: setup_suite.bash  tests.bats
src/: plugin.cpp
